Fix broken css color token variable preivew Augument css test files for raw color tokens

--- a/testfiles/test.less
+++ b/testfiles/test.less
@@ -1,6 +1,14 @@
+/* Referenced color token variables */
 .class {
     color: var(--colorA);
     background-color: var(--colorB);
     outline: 1px solid var(--colorC);
     border: 1px dashed var(--not-color-token);
+}
+
+/* Raw color tokens */
+.classB {
+    color: #00ff00;
+    background-color: #ff0000;
+    outline: 1px solid #0000ff;
 }
